# ioa-core

./: .gitattributes  .gitignore  .hygieneignore  .hygienerc.yml  .markdownlint.yaml  .pre-commit-config.yaml  .trufflehogignore  .vale.ini  CHANGELOG.md  CHECKSUMS.sha256  CLI_SYNTAX_KNOWN_ISSUES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DISPATCH_COMPLETE_COLAB_AND_CORE_HYGIENE.md  DISPATCH_COMPLETE_FINAL.md  DISPATCH_COMPLETE_LAUNCH.md  DISPATCH_COMPLETE_LOCAL_GATE.md  DISPATCH_STATUS_NO_SKIPS.md  Dockerfile.perf  FEATURE_MATRIX.md  LICENSE  MAINTAINERS.md  MDC.md  MIGRATION.md  Makefile  NOTICE  OSS_RELEASE_COMPLETE.md  README.md  SCALING.md  SECURITY.md  TRADEMARK.md  TRADEMARK_NOTICE.md  WHERE_THINGS_LIVE.md  agent_trust_registry.json  api_keys_template.txt  backup_ioa.sh  branch_protection.json  changed-md.txt  check_ioa_llm.py  (+17 more)
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build.yml  license-spdx.yml  linkcheck.yml  no-enterprise-keywords.yml
adapters/: __init__.py  agent_coordinator.py  agent_onboarding.py  agent_router.py  audit_logger.py  bootloader.py  cli_interface.py  cold_storage.py  commands.py  compatibility_shims.py  conscious_runtime.py  digestor.py  digestor_module.py  ethics_filter.py  evaluation_agent.py  evaluation_model.py  kpi_monitor.py  langchain_adapter.py  llamaindex_adapter.py  llm_adapter.py  llm_manager.py  memory_engine.py  model_onboarding.py  mongo_storage_service.py  mood_engine.py  nlp_module.py  nlp_module_interface.py  pattern_governance.py  pattern_weaver.py  provider_router.py  refinery_utils.py  reinforcement_policy.py  roundtable_executor.py  runtime_control.py  sentinel_validator.py  storage_adapter.py  sustainability.py  task_orchestrator.py  validate_multilang_final.py  vendor_neutral_roundtable.py  (+1 more)
adapters/audit/: __init__.py  canonical.py  circuit_breaker.py  models.py  storage.py  timestamping.py  verify.py
adapters/cli/: __init__.py  ci_gates.py  errors.py  main.py  onboard.py  pr_bot_utils.py  security_utils.py  workflows.py
adapters/config/: loader.py  (+2 more)
cli/: ioa_cli.py
cold_storage/: __init__.py  audit_log.py  large-entry.enc  test-cold-entry.enc  test_key.enc
config/: agent_config.yaml  agent_onboarding_schema.json  domain_profile_template.json  governance.config.yaml  model_id_aliases.yaml  model_trust_registry.json  quorum.yaml  reinforcement_config.py  sentiment.yaml  staging.yaml  sustainability.yaml
data/: links.json  milestones.json  state.json
docs/: BENCHMARK_POLICY.md  BIAS_MITIGATION.md  CI_GATE_STRUCTURE.md  COMPARISON.md  COMPLIANCE_CHECKLIST.md  CONTRIBUTING.md  DISCLAIMER.md  ENVIRONMENT_SETUP.md  FAQ.md  FINAL_DOCS_MANIFEST.json  GLOSSARY.md  GOVERNANCE.md  INTEGRATION_STRATEGY_v2_4_6.txt  IOA_MASTER_SNAPSHOT_v2_4_6.txt  LEGAL_DEPENDENCIES.md  LINKCHECK_RESULTS.txt  MEMORY_ENGINE.md  Multi-Agent Validation Academic Paper.md  ONBOARDING.md  OSS_READINESS_FINAL.md  PERFORMANCE.md  PERF_SCORECARD.md  PREFLIGHT_SCAN.txt  PRUNE_SUMMARY.md  QUICKSTART_BEGINNER.md  README_IOA_v2_4_6.txt  REFERENCE_GLOSSARY.md  RELEASE_NOTES.md  ROADMAP_IOA_CORE_v2_4_6.txt  ROUNDTABLE.md  SECURITY.md  SECURITY_GUIDE_IOA_v2_4_6.txt  SENTINEL_INTEGRATION.md  SIMULATION.md  STRATEGIC_UPDATE_MEMO_IOA_v2_4_6.txt  TERMS_OF_USE.md  WORKFLOWS.md  env.example  eth_gov_005_completion.md  feature-matrix.md  (+5 more)
dsl/: workflow_schema.yaml
examples/: energy_plan.json  patterns.json
ioa/: __init__.py  config.py
monitoring/: advanced_dashboard.json  alertmanager.yml  dashboard_config.yaml  docker-compose.yml  enhanced_rules.yml  grafana_dashboard.json  ioa_rules.yml  metrics_collector.py  metrics_exporter.py  monitor.py  prometheus.yml
scripts/: backup_restore_validator.py  benchmark_competitors.py  ci_organization_guard.py  ci_sanity.sh  dev_local_setup.sh  dev_test_quick.sh  doc_doctest.sh  ec2_100k_gate.sh  ec2_perf_preflight.sh  generate_evidence.py  generate_sbom.py  ledger_gate.sh  migrate_audit_chains.py  monitoring_setup.py  oss_docs_lint.sh  pyexe.sh  run_500k_sharded.sh  run_fist_test.sh  run_perf.sh  run_perf_safe.sh  security_validation.py  setup_branch_protection.sh  staging_rollout.py  validate_docs.py  verify_shard_integrity.py
specs/: final_report.schema.json  log_entry.schema.json  mapping-manifest.v1.json  vote_record.schema.json
tests/: agent_trust_registry.json  conftest.py  digestor.py  ioa_phase2_validation.py  sentinel_demo_script.py  test_agent_onboarding.py  test_agent_router_domain_schema.py  test_agent_router_final.py  test_assurance_calc.py  test_audit_chain.py  test_audit_logger_batch.py  test_bootloader.py  test_ci_gates.py  test_ci_gates_integration.py  test_cold_storage.py  test_connectors.py  test_digestor_demo.py  test_hitl_override_audit.py  test_kpi_monitor_final.py  test_llm_adapter.py  test_logging_schema.py  test_mood_engine.py  test_pattern_weaver.py  test_reinforcement_policy.py  test_roundtable_executor.py  test_schema_harness.py  test_signature_engine.py  test_smoketest_cost_cap.py  test_tiering_4d.py  test_vendor_neutral_roundtable.py
tools/: apply_headers.py  check_test_status.sh  demo_roundtable.py  docops_cli_api.py  docops_execute.py  docops_final_remediate.py  docops_prose_format.py  docops_remediate.py  docops_tutorial_audit.py  github_hygiene.py  governance_validation_test.py  keycheck.py  license_audit.py  mapping_emit.py  migrate_memory_engine_to_fabric.py  perf-mini.yml  quick_status.sh  ssm_run_perf.sh
(+449 files in other folders)
